finding-android1/stylesheets/style.css
@import url(http://fonts.googleapis.com/css?family=Orbitron:700);

body {
}
h1{
  text-align: center;
  font-family: "Orbitron", Arial, serif;
}
p{
  text-align: center;
}
#submit{
  display: block;
  margin-left: auto;
  margin-right: auto;
}
#android_logo{
  display: block;
  margin-left: auto;
  margin-right: auto;
}
#intro{
  text-align: center;
}
#android_level1{
  width: 20px;
  height: 25px;
  position:relative;
  top: 470px;
  left: 505px;
  z-index:1;
}
#android_level2{
  width: 20px;
  height: 25px;
  position:relative;
  top: 60px;
  left: 83px;
  z-index:1;
}
#android_level3{
  width: 20px;
  height: 25px;
  position:relative;
  top: 958px;
  left: 1385px;
  z-index:1;
}
#android_level4{
  width: 20px;
  height: 25px;
  position:relative;
  top: 250px;
  left: 540px;
  z-index:1;
}
#android_level5{
  width: 20px;
  height: 25px;
  position:relative;
  top: 420px;
  left: 658px;
  z-index:1;
}
.bglevel1{
  width: 50%;
  height: 631px;
  margin: 0 auto;
  background-image: url("http://www.pragmaticmom.com/wp-content/uploads/2014/05/map.jpg");
  background-repeat: no-repeat;
}
.bglevel2{
  width: 85%;
  height: 1232px;
  margin: 0 auto;
  background-image: url("https://c1.staticflickr.com/5/4153/5094259179_8590d66c59_b.jpg");
  background-repeat: no-repeat;
}
.bglevel3{
  width: 50%;
  height: 1000px;
  margin: 0 auto;
  background-image: url("http://marketurbanism.com/wp-content/uploads/2014/07/Tokyo.jpg");
  background-repeat: no-repeat;
}
.bglevel4{
  width: 50%;
  height: 1000px;
  margin: 0 auto;
  background-image: url("http://blog.artandstory.com/wp-content/uploads/2011/06/spread01-washdc_crop.jpg");
  background-repeat: no-repeat;
}
.bglevel5{
  width: 50%;
  height: 1000px;
  margin: 0 auto;
  background-image: url("http://arzoenterprises.com/new-site/wp-content/uploads/2014/07/3356624308_53fdd5dde3_o.jpg");
  background-repeat: no-repeat;
}
.header{
  text-align: center;
}
body.welcomebody{
  font-family: 'Orbitron', Arial, sans-serif;
  background-image: url("http://www.consalpi.it/images/white-abstract-background-with-green-lines.jpg.jpg");
  background-repeat: no-repeat;
  background-size: cover;
}

